--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,9 +5,9 @@ before:
     - go mod tidy
 builds:
   - env:
-      - CGO_ENABLED=1
+      - CGO_ENABLED=0
     ldflags:
-      - -s -w -X github.com/xujiahua/podcast/cmd.version={{.Version}} -X github.com/xujiahua/podcast/cmd.commit={{.Commit}} -X github.com/xujiahua/podcast/cmd.date={{.Date}} -X github.com/xujiahua/podcast/cmd.builtBy=goreleaser
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}} -X main.builtBy=goreleaser
     goos:
       - linux
       - windows
